# cpp_project

./: .env.example  .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  RESEARCH.md  course_sum.txt  data_ingestion.md
data/processed/continuous/: 6E.csv  6J.csv  CL.csv  ES.csv  GC.csv  NQ.csv  YM.csv  ZB.csv  ZN.csv
data/processed/macro/: macro_panel.csv
data/raw/databento/: 6E.csv  6J.csv  CL.csv  ES.csv  GC.csv  NQ.csv  YM.csv  ZB.csv  ZN.csv
data/raw/fred/: BAA10Y.csv  DFII10.csv  DGS10.csv  DGS2.csv  DTWEXBGS.csv  STLFSI4.csv  T10Y3M.csv  T10YIE.csv  WALCL.csv
data/raw/vix/: VIX.csv
data/sample/: ES.csv  GC.csv
include/backtest/: Backtester.hpp  ExperimentConfig.hpp  PerformanceMetrics.hpp  ResultAggregator.hpp
include/core/: Constants.hpp  DailyBar.hpp  MarketEvent.hpp  RollingWindow.hpp  ThreadPool.hpp  ThreadSafeQueue.hpp
include/data/: CSVLoader.hpp  MacroDataLoader.hpp  MarketDataLoader.hpp
include/signals/: MomentumSignal.hpp  MovingAverageSignal.hpp  RegimeClassifier.hpp  SignalResult.hpp  VolatilitySignal.hpp
output/baseline/: 6E_equity.csv  6E_positions.csv  6J_equity.csv  6J_positions.csv  CL_equity.csv  CL_positions.csv  ES_equity.csv  ES_positions.csv  GC_equity.csv  GC_positions.csv  NQ_equity.csv  NQ_positions.csv  YM_equity.csv  YM_positions.csv  ZB_equity.csv  ZB_positions.csv  ZN_equity.csv  ZN_positions.csv
output/regime_v1/: 6E_equity.csv  6E_positions.csv  6J_equity.csv  6J_positions.csv  CL_equity.csv  CL_positions.csv  ES_equity.csv  ES_positions.csv  GC_equity.csv  GC_positions.csv  NQ_equity.csv  NQ_positions.csv  YM_equity.csv  YM_positions.csv  ZB_equity.csv  ZB_positions.csv  ZN_equity.csv  ZN_positions.csv
scripts/: build_continuous.py  build_macro_panel.py  download_data.py
src/: main.cpp
src/backtest/: Backtester.cpp  ResultAggregator.cpp
src/core/: ThreadPool.cpp
src/data/: CSVLoader.cpp  MacroDataLoader.cpp  MarketDataLoader.cpp
src/signals/: MomentumSignal.cpp  MovingAverageSignal.cpp  RegimeClassifier.cpp  VolatilitySignal.cpp
tests/: test_backtester.cpp  test_csv_loader.cpp  test_result_aggregator.cpp  test_signals.cpp  test_thread_pool.cpp  test_thread_safe_queue.cpp
